# ic-wasmi

./: .gitmodules  README.md  post.md
e2e-tests/: dfx.json  package.json  tsconfig.json
e2e-tests/buildscripts/: on-chain-wasm-interpreter.sh
e2e-tests/canister/: Cargo.toml  build.sh  can.did  dfx.json
e2e-tests/canister/src/: actor.rs
e2e-tests/src/: add.wasm  deploy.ts  interpreter.spec.ts  mul.wasm  sub.wasm  utils.ts
lib/: Cargo.toml
rust-wasm/src/: lib.rs
